fix: download list description in analytics on mobile (#1056)

--- a/css/admin.css
+++ b/css/admin.css
@@ -676,6 +676,10 @@ label.podlove_cc_license_selector_label {
 	line-height: 1.5em;
 }
 
+#the-list .downloads-description {
+	display: table-cell;
+}
+
 .wp-list-table .column-episode_number {
 	width: 30px;
 }
